# csp-bot

./: .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  wiki.yml
csp_bot/: __init__.py  bot.py  bot_config.py  cli.py  persistence.py  structs.py  utils.py
csp_bot/backends/: __init__.py  discord.py  slack.py  symphony.py  telegram.py
csp_bot/commands/: __init__.py  agent.py  base.py  common.py  context.py  delaytest.py  echo.py  executor.py  framework.py  fun.py  help.py  legacy.py  mets.py  schedule.py  status.py  thanks.py  trout.py
csp_bot/config/: __init__.py  commands.yaml  conf.yaml  modules.yaml
csp_bot/config/backend/: discord.yaml  slack.yaml  symphony.yaml  telegram.yaml
csp_bot/config/gateway/: all.yaml  bot.yaml  discord.yaml  mixed.yaml  slack.yaml  symphony.yaml  telegram.yaml
csp_bot/config/hydra/job_logging/: custom.yaml
csp_bot/gateway/: __init__.py  gateway.py
csp_bot/tests/: conftest.py  test_agent_command.py  test_all.py  test_backends.py  test_bot.py  test_bot_integration.py  test_command_framework.py  test_config.py  test_config_composition.py  test_echo.py  test_help_command.py  test_persistence.py  test_schedule.py  test_slack_entity_regex.py  test_structs.py  test_utils.py
docs/wiki/: Advanced.md  Backends.md  Commands.md  Configuration.md  Installation.md  Overview.md  Writing-Commands.md  _Footer.md  _Sidebar.md
docs/wiki/contribute/: Build-from-Source.md  Contribute.md  Local-Development-Setup.md
example/bot/: all.yaml  custom.yaml  discord.yaml  mixed.yaml  slack.yaml  symphony.yaml  telegram.yaml
