[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "csp-bot"
authors = [{name = "the csp-bot authors", email = "CSPOpenSource@point72.com"}]
description = "CSP Bot"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "1.1.0"
requires-python = ">=3.9"
keywords = [
    "csp",
    "stream-processing",
    "slack",
    "chat",
    "chatbot",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "beautifulsoup4",
    "ccflow>=0.5.2",
    "croniter",
    "csp>=0.9,<1",
    "csp-gateway>=2,<3",
    "dateparser",
    "hydra-core",
    "pandas",
    "pydantic>=2",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.2.6,<2.5",
    "csp-adapter-discord>=0.1,<0.2",
    "csp-adapter-slack>=0.3,<0.4",
    "csp-adapter-symphony>=0.3,<0.4",
    "hatchling",
    "mdformat>=0.7.17,<0.8",
    "mdformat-tables>=1,<1.1",
    "pytest",
    "pytest-cov",
    "ruff>=0.5,<0.10",
    "twine>=5,<7",
    "wheel",
]

[project.scripts]
csp-bot-start = "csp_bot.cli:main"

[project.urls]
Repository = "https://github.com/point72/csp-bot"
Homepage = "https://github.com/point72/csp-bot"

[tool.bumpversion]
current_version = "1.1.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "csp_bot/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    "Makefile",
    "docs/**/*",
    "example/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "csp_bot/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 0

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["csp_bot"]
exclude = ["/docs", "/example"]

[tool.hatch.build.targets.wheel]
packages = ["csp_bot"]
exclude = ["/docs", "/example"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "csp_bot/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["csp_bot"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"csp_bot/backends" = ["F401", "F403"]
"__init__.py" = ["F401", "F403"]
